--- a/src/app/pages/djagora-academy/formations/formations.component.css
+++ b/src/app/pages/djagora-academy/formations/formations.component.css
@@ -428,8 +428,8 @@ a:hover {
   }
 
   .postcard:nth-child(2n+1) .postcard__text::before {
-      left: -12px !important;
-      transform: rotate(4deg);
+    right: -12px !important;
+    transform: rotate(-4deg);
   }
 
   .postcard:nth-child(2n+0) .postcard__text::before {
