--- a/src/app/pages/djagora-academy/formations/formations.component.html
+++ b/src/app/pages/djagora-academy/formations/formations.component.html
@@ -140,7 +140,7 @@
       <!-- Card -->
       <div class="card ovf-hidden mx-1 " style="      border: 2px solid #edf2f4;
 ;box-shadow: 0 0 5pt 1pt hsla(0, 2%, 88%, 0.308);
-" *ngFor="let p of formations ">
+" *ngFor="let p of archive ">
 
 
         <div style="      border: 2px solid #edf2f4;
