--- a/src/app/pages/djagora-academy/scrum/backlog/backlog.component.html
+++ b/src/app/pages/djagora-academy/scrum/backlog/backlog.component.html
@@ -30,12 +30,11 @@
   <div class="container">
 
     <div class="row">
-      <button [routerLink]='["/SingleProject",id]' class="btn ml-3  col-md-auto btn_retour "
-      >🢀 Back</button>
+      <button [routerLink]='["/SingleProject",id]' class="btn ml-3  col-md-auto btn_retour ">🢀 Back</button>
       <button [routerLink]='["/sprint",id]' class="btn mx-3  col-md-auto  "
         style="color: white;background-color:#0081c2;">Sprints</button>
 
-        <span *ngIf=" scrumBool==true " class="badge  badge-dark col-md-auto ml-1"   >
+      <span *ngIf=" scrumBool==true " class="badge  badge-dark col-md-auto ml-1">
         <div class="row ">
           <img [src]="imgpath+scrumMaster.img" alt="" style="width: 30%;border-radius:100%;">
           <h6 style="margin-top: -15%;">{{scrumMaster.name}}</h6>
@@ -43,13 +42,13 @@
 
 
       </span>
-      <span *ngIf="scrumBool==false" class="badge badge-dark col-md-auto" style="margin-left: 80%;">
+      <span *ngIf="scrumBool==false" class="badge badge-dark col-md-auto" >
         <h6>No scrum master yet</h6>
 
       </span>
 
-      <button *ngIf="SingleProject.user_id==loggeduser['id']"   class="btn mx-1  col-md-auto w-20 " id="myBtn" onclick="popup()"
-        style="color: white;background-color: #0081c2;">+</button>
+      <button *ngIf="SingleProject.user_id==loggeduser['id']" class="btn mx-1  col-md-auto w-20 " id="myBtn"
+        onclick="popup()" style="color: white;background-color: #0081c2;">+</button>
 
     </div>
 
@@ -121,7 +120,7 @@
       </div>
       <div class="col-lg-4 col-md-5 col-sm-4 offset-md-1 offset-sm-1 col-12 mt-4">
 
-        <form  id="algin-form" [formGroup]="userStoryForm">
+        <form id="algin-form" [formGroup]="userStoryForm">
           <div class="form-group">
             <h4 style="color: #0081c2;">Add user story</h4>
             <label for="name">Title</label>
@@ -164,8 +163,10 @@
           </div>
 
           <div class="form-group">
-            <button type="button" id="post" class="btn " (click)="onSubmit()" *ngIf=" loggeduser['id']==scrumMaster.id || SingleProject.user_id==loggeduser['id']">Submit</button>
-            <p  *ngIf="loggeduser['id']!=scrumMaster.id && SingleProject.user_id!=loggeduser['id']" style="font-weight: bold;color:red;" >You have no access to add user story</p>
+            <button type="button" id="post" class="btn " (click)="onSubmit()"
+              *ngIf=" loggeduser['id']==scrumMaster.id || SingleProject.user_id==loggeduser['id']">Submit</button>
+            <p *ngIf="loggeduser['id']!=scrumMaster.id && SingleProject.user_id!=loggeduser['id']"
+              style="font-weight: bold;color:red;">You have no access to add user story</p>
           </div>
         </form>
       </div>
