--- a/src/app/pages/djagora-academy/scrum/sprints/edit-sprint/edit-sprint.component.html
+++ b/src/app/pages/djagora-academy/scrum/sprints/edit-sprint/edit-sprint.component.html
@@ -113,8 +113,8 @@
 
                       <button class="btn  ml-2 btn-flash-border-primary col-md-auto "
                         style="background-color: #0081c2;color:white;" [routerLink]='["/boards",this.id]'>Check
-                        board</button>
-
+                        board
+                      </button>
                     </div>
                   </div>
                 </div>
