Des fonctions d'évaluation pour le sprint 1 et 2
En plus de ces fonctions , l'ajout des api dans service

--- a/src/app/pages/djagora-academy/scrum/sprints/edit-sprint/edit-sprint.component.html
+++ b/src/app/pages/djagora-academy/scrum/sprints/edit-sprint/edit-sprint.component.html
@@ -29,16 +29,14 @@
       <h1 class="titre">Evaluation {{sprint.name}}</h1>
       <h4 class="my-4 mx-4" style="color: #0081c2;">Nombre d'items total:</h4>
       <h4 class="my-4 mx-4" style="color: #0081c2;">Les items réalisés :</h4>
-      <input type="number" style="width:30%;" class="mx-4">
 
       <h4 class="my-4 mx-4" style="color: #0081c2;">Les heurs réaliseés :</h4>
       <input type="number" style="width:30%;" class="mx-4">
-      <br>
-      <button type="button" class="btn mx-5"
-        style="width: 10%; background-color: #0081c2 ;    margin-left: 5px; ">submit</button>
+      
 
       <h4 class="my-4 mx-4" style="color: #0081c2;">Durée :</h4>
-
+      <button type="button" class="btn mx-5"
+        style="width: 10%; background-color: #0081c2 ; color: white; float: right;  margin-left: 5px; ">SUBMIT</button>
     </div>
 
     <!--sprint2-->
@@ -54,7 +52,7 @@
       <input type="number" style="width:30%;" class="mx-4">
       <br>
       <button type="button" class="btn mx-5"
-        style="width: 10%; background-color: #0081c2 ;    margin-left: 5px; ">submit</button>
+        style="width: 10%; background-color: #0081c2 ;  color: white;  margin-left: 5px; ">submit</button>
 
     </div>
     <!--sprint3-->
@@ -230,7 +228,7 @@
           <td>70%</td>
         </tr>
         <tr>
-          <td><button type="button" class="btn mx-5" style=" background-color: #0081c2 ;     ">submit</button></td>
+          <td><button type="button" class="btn mx-5" style=" background-color: #0081c2 ; color: white;     ">submit</button></td>
         </tr>
       </table>
     </div>
@@ -282,7 +280,7 @@
           <td>70%</td>
         </tr>
         <tr>
-          <td><button type="button" class="btn mx-5" style=" background-color: #0081c2 ;     ">submit</button></td>
+          <td><button type="button" class="btn mx-5" style=" background-color: #0081c2 ;  color: white;   ">submit</button></td>
         </tr>
       </table>
     </div>
@@ -303,7 +301,7 @@
         <input type="number" style="width: 50%;" class="mx-4">
         <br><br>
         <button type="button" class="btn mx-5"
-          style="width: 10%; background-color: #0081c2 ;    margin-left: 5px; ">submit</button>
+          style="width: 10%; background-color: #0081c2 ;  color: white;  margin-left: 5px; ">submit</button>
 
       </div>
 
@@ -327,7 +325,7 @@
         <input type="number" style="width: 50%;" class="mx-4">
         <br><br>
         <button type="button" class="btn mx-5"
-          style="width: 10%; background-color: #0081c2 ;    margin-left: 5px; ">submit</button>
+          style="width: 10%; background-color: #0081c2 ; color: white;   margin-left: 5px; ">submit</button>
 
       </div>
 
