--- a/src/app/pages/djagora-academy/scrum/sprints/edit-sprint/edit-sprint.component.css
+++ b/src/app/pages/djagora-academy/scrum/sprints/edit-sprint/edit-sprint.component.css
@@ -138,17 +138,16 @@
   
   
   
-.btn_retour button {
+.btn_retour  {
   background: transparent;
   cursor: pointer;
   color: #0081C2;
   border: 2px solid #0081c2;
   border-radius: 5px;
   transition: background 0.5s;
-  padding-left: 12px;
-    padding-right: 12px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+  padding: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .btn_retour {
@@ -156,24 +155,23 @@
   padding: 5px 0px;
 
   position: relative;
-  
- 
-  
 
 }
 
-.btn_retour button:hover {
+.btn_retour:hover {
   color: white;
   background: #0081c2;
   border-color: #0081c2;
 }
 
-.btn_retour button:hover {
+.btn_retour:hover {
   color: white;
   background: #0081c2;
   border-color: #0081c2;
 }
   
+
+
 
 
 
